--- a/openwrt-bandix/Makefile
+++ b/openwrt-bandix/Makefile
@@ -1,8 +1,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=bandix
-PKG_VERSION:=0.8.3
-PKG_RELEASE:=1
+PKG_VERSION:=0.10.3
+PKG_RELEASE:=2
 
 PKG_LICENSE:=Apache-2.0
 PKG_MAINTAINER:=timsaya
@@ -13,7 +13,7 @@ include $(INCLUDE_DIR)/package.mk
 include $(TOPDIR)/feeds/packages/lang/rust/rust-values.mk
 
 # 二进制文件的文件名和URL
-RUST_BANDIX_VERSION:=0.8.3
+RUST_BANDIX_VERSION:=0.10.3
 RUST_BINARY_FILENAME:=bandix-$(RUST_BANDIX_VERSION)-$(RUSTC_TARGET_ARCH).tar.gz
 
 
@@ -50,13 +50,25 @@ define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_DIR) $(1)/etc/config
 	$(INSTALL_BIN) ./files/bandix.init $(1)/etc/init.d/bandix
-	$(INSTALL_CONF) ./files/bandix.config $(1)/etc/config/bandix
+
+	# 将配置文件安装到临时位置，由 postinst 决定是否复制到最终位置
+	$(INSTALL_DIR) $(1)/usr/share/bandix
+	$(INSTALL_CONF) ./files/bandix.config $(1)/usr/share/bandix/bandix.config.default
 endef
 
+define Package/$(PKG_NAME)/conffiles
+/etc/config/bandix
+endef
 
 define Package/$(PKG_NAME)/postinst
 #!/bin/sh
 if [ -z "$${IPKG_INSTROOT}" ]; then
+    # 检查配置文件是否存在，如果不存在才从默认配置复制
+    if [ ! -f /etc/config/bandix ]; then
+        cp /usr/share/bandix/bandix.config.default /etc/config/bandix
+    fi
+    
+    # 添加到 sysupgrade.conf 以在系统升级时保留
     if ! grep -q "^/usr/share/bandix$$" /etc/sysupgrade.conf; then
         echo "/usr/share/bandix" >> /etc/sysupgrade.conf
     fi
